--- a/index3.html
+++ b/index3.html
@@ -1,12 +1,352 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>bonjour html</h1>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>bootstrap(5.2.x)_TP</title>
+
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+      crossorigin="anonymous"
+    ></script>
+
+    <style>
+      .image-ronde {
+        width: 350px;
+        height: 350px;
+        border: none;
+        clip-path: circle(50%);
+      }
+    </style>
+  </head>
+  <body>
+    <div class="container-fluid">
+      <nav class="navbar navbar-expand-lg bg-light">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">ENSET</a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#"
+                  >Accueil</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Sevices</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Contact</a>
+              </li>
+            </ul>
+            <form class="d-flex" role="search">
+              <input
+                class="form-control me-2"
+                type="search"
+                placeholder="Search"
+                aria-label="Search"
+              />
+              <button class="btn btn-outline-success" type="submit">
+                Search
+              </button>
+            </form>
+          </div>
+        </div>
+      </nav>
+    </div>
+
+    <div class="container-fluid">
+      <div
+        id="carouselExampleIndicators"
+        class="carousel slide"
+        data-bs-ride="true"
+      >
+        <div class="carousel-indicators">
+          <button
+            type="button"
+            data-bs-target="#carouselExampleIndicators"
+            data-bs-slide-to="0"
+            class="active"
+            aria-current="true"
+            aria-label="Slide 1"
+          ></button>
+          <button
+            type="button"
+            data-bs-target="#carouselExampleIndicators"
+            data-bs-slide-to="1"
+            aria-label="Slide 2"
+          ></button>
+          <button
+            type="button"
+            data-bs-target="#carouselExampleIndicators"
+            data-bs-slide-to="2"
+            aria-label="Slide 3"
+          ></button>
+          <button
+            type="button"
+            data-bs-target="#carouselExampleIndicators"
+            data-bs-slide-to="3"
+            aria-label="Slide 4"
+          ></button>
+        </div>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img
+              src="../images/Capture d’écran 2022-12-10 202044.png"
+              class="d-block w-100"
+              alt="..."
+            />
+          </div>
+          <div class="carousel-item active">
+            <img
+              src="../images/Capture d’écran 2022-12-10 201916.png"
+              class="d-block w-100"
+              alt="..."
+            />
+          </div>
+          <div class="carousel-item">
+            <img
+              src="../images/Capture d’écran 2022-12-10 201940.png"
+              class="d-block w-100"
+              alt="..."
+            />
+          </div>
+          <div class="carousel-item">
+            <img
+              src="../images/Capture d’écran 2022-12-10 202011.png"
+              class="d-block w-100"
+              alt="..."
+            />
+          </div>
+        </div>
+        <button
+          class="carousel-control-prev"
+          type="button"
+          data-bs-target="#carouselExampleIndicators"
+          data-bs-slide="prev"
+        >
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button
+          class="carousel-control-next"
+          type="button"
+          data-bs-target="#carouselExampleIndicators"
+          data-bs-slide="next"
+        >
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+    </div>
+
+    <div class="container-fluid">
+      <div class="container text-center">
+        <div class="row">
+          <div class="col">
+            <div class="card" style="width: 18rem">
+              <img
+                img
+                src="https://picsum.photos/1200/1500?87"
+                class="card-img-top"
+                alt="..."
+              />
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">
+                  Some quick example text to build on the card title and make up
+                  the bulk of the card's content.
+                </p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card" style="width: 18rem">
+              <img
+                img
+                src="https://picsum.photos/1200/1500?65"
+                class="card-img-top"
+                alt="..."
+              />
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">
+                  Some quick example text to build on the card title and make up
+                  the bulk of the card's content.
+                </p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card" style="width: 18rem">
+              <img
+                img
+                src="https://picsum.photos/1200/1500?43"
+                class="card-img-top"
+                alt="..."
+              />
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">
+                  Some quick example text to build on the card title and make up
+                  the bulk of the card's content.
+                </p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
+              </div>
+            </div>
+          </div>
+          <h1>NOTRE EQUIPE</h1>
+        </div>
+      </div>
+    </div>
+
+    <section class="section team bg-shape-two" id="team">
+      <div class="container">
+        <div class="row">
+          <div class="col-12">
+            <div class="section-title mb-4">
+              <h3 class="mb-3">Our Creative Team</h3>
+              <p>
+                Demoralized by the charms of pleasure of the moment, so blinded
+                by desire, that they cannot foresee idea of denouncing pleasure
+                and praising
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-lg-4 col-md-6">
+            <!-- Team Member -->
+            <div class="team-member text-center mb-4 mb-lg-0">
+              <div class="image">
+                <img
+                  class="image-ronde"
+                  src="../images/hakim-ziyech.jpg"
+                  alt="team-member"
+                />
+              </div>
+              <div class="name">
+                <h5>hakim-ziyech</h5>
+              </div>
+              <div class="position">
+                <p>
+                  Hakim Ziyech, né le 19 mars 1993 à Dronten, est un footballeur
+                  international marocain évoluant au poste d'ailier droit ou de
+                  milieu offensif à Chelsea. Ziyech est connu pour être un
+                  joueur technique doté d'une excellente vista et d'une très
+                  belle qualité de passe.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6">
+            <!-- Team Member -->
+            <div class="team-member text-center mb-4 mb-lg-0">
+              <div class="image">
+                <img
+                  class="image-ronde"
+                  src="../images/2-Qatar22_bono.jpg"
+                  alt="team-member"
+                />
+              </div>
+              <div class="name">
+                <h5>YASSINE BOUNOU</h5>
+              </div>
+              <div class="position">
+                <p>
+                  Yassine Bounou, surnommé Bono, né le 5 avril 1991 à Montréal,
+                  est un footballeur international marocain évoluant au poste de
+                  gardien de but au Séville FC. Formé au Wydad Athletic Club, il
+                  remporte le championnat marocain en 2010 et atteint la finale
+                  de la Ligue des champions de la CAF en 2011
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6">
+            <!-- Team Member -->
+            <div class="team-member text-center mb-4 mb-lg-0">
+              <div class="image">
+                <img
+                  class="image-ronde"
+                  src="../images/Qatar22_AchrafHakimi.jpg"
+                  alt="team-member"
+                />
+              </div>
+              <div class="name">
+                <h5>ACHRAF HAKIMI</h5>
+              </div>
+              <div class="position">
+                <p>
+                  Achraf Hakimi, né le 4 novembre 1998 à Madrid, est un
+                  footballeur international marocain évoluant au poste d'arrière
+                  droit au Paris Saint-Germain. Formé au Real Madrid, il
+                  participe à l'UEFA Youth League avant de faire ses débuts en
+                  équipe première sous Zinédine Zidane, remportant la Ligue des
+                  champions 2017-2018.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <div class="container overflow-hidden text-center">
+      <div class="row gx-5">
+        <div class="col">
+          <div class="p-3 border bg-light">
+            <div id="site-footer">
+              <div class="region region-footer">
+                <div
+                  id="block-julio-core-footer"
+                  class="block block-julio-core"
+                >
+                  <div class="content">
+                    <p>Ecole Normale Supérieure de l'Enseignement Technique</p>
+                    <p>BP 159 Bd Hassan II Mohammedia</p>
+                    <p>Tél. : 05 23 32 22 20 - 05 23 32 35 30</p>
+                    <p>Fax : 05 23 32 25 46</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="p-3 border bg-light">
+            <iframe
+              src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13276.660376582622!2d-7.3604533!3d33.7046767!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x79759da1a916fc50!2sENSET%20Mohammedia!5e0!3m2!1sfr!2sma!4v1670702136480!5m2!1sfr!2sma"
+              width="500"
+              height="me-auto"
+              style="border: 0"
+              allowfullscreen=""
+              loading="lazy"
+              referrerpolicy="no-referrer-when-downgrade"
+            ></iframe>
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
